codama-macros/tests/codama_attribute/attribute_directive/invalid_optional.fail.stderr
error: expected a literal boolean
 --> tests/codama_attribute/attribute_directive/invalid_optional.fail.rs:3:29
  |
3 | #[codama(account(optional = invalid))]
  |                             ^^^^^^^
