codama-macros/tests/codama_attribute/attribute_directive/invalid_optional.fail.rs
use codama::codama;

#[codama(account(optional = invalid))]
pub struct Test;

fn main() {}
